test/error/iocheck/err1.rzy
// Error: query is not allowed to output


interface
  IfaceEvent
    function event();
  end
  
  IfaceQuerry
    function query():R{0,100};
  end
  
component
  Err1
    input
      in  : IfaceQuerry;
    
    output
      out : IfaceEvent;
      
    implementation elementary
    
    function in.query():R{0,100}
      out.event();
      return 0;
    end
    
  end

